# deep-speech-service

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  start.sh  start_streaming_server.sh  stop.sh  view_smi.sh
speech_service/: app.py  config.py  logging.py  model.py  remote_actor.py
speech_service/service/: audio_asr.py  service_util.py  video_asr.py  websocket_asr_client.py
tests/: pathos_test.py  seg_test.py
tests/service/: audio_asr_test.py  service_util_test.py  video_asr_text.py
